Bootstrap support added

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,3 +1,6 @@
+Pages 3.0.0
+  * Bootstrap support added
+
 Pages 2.6.1
   * ContentType folder name also being used for plugins for Content, issue #21
   * class names in user/display template corrected, issue #22
