refactor to Twig and Symfony Forms. requires pending core changes (https://github.com/zikula/core/pull/2447). many templates left in 'trash' directory simply for reference until refactor is complete. Several items (like admin form order and customization) is incomplete but will be added soon.

--- a/Resources/docs/changelog.txt
+++ b/Resources/docs/changelog.txt
@@ -1,4 +1,8 @@
 Pages 3.0.0
+  * Converted to Core 2.0.0 standards
+    * namespaced
+    * converted to Twig
+    * converted to symfony forms
   * Bootstrap support added
 
 Pages 2.6.1
