improvements and updates

--- a/Resources/translations/routes.en.po
+++ b/Resources/translations/routes.en.po
@@ -4,28 +4,38 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: en\n"
 
-msgid "ajaxinstall"
-msgstr "/ajaxinstall"
-msgid "ajaxupgrade"
-msgstr "/ajaxupgrade"
 msgid "doc"
 msgstr "/installdoc/{name}"
 msgid "fos_js_routing_js"
 msgstr "/js/routing.{_format}"
+msgid "home"
+msgstr "/"
 msgid "install"
 msgstr "/install/{stage}"
+msgid "liip_imagine_filter"
+msgstr "/media/cache/resolve/{filter}/{path}"
+msgid "liip_imagine_filter_runtime"
+msgstr "/media/cache/resolve/{filter}/rc/{hash}/{path}"
 msgid "upgrade"
 msgstr "/upgrade/{stage}"
+msgid "zikula_hook_hook_changeproviderareaorder"
+msgstr "/hooks/changeorder"
+msgid "zikula_hook_hook_edit"
+msgstr "/hooks/{moduleName}"
+msgid "zikula_hook_hook_togglesubscribeareastatus"
+msgstr "/hooks/togglestatus"
+msgid "zikula_workflow_editor_index"
+msgstr "/editor/index"
 msgid "zikulapagesmodule_admin_index"
 msgstr "/admin"
 msgid "zikulapagesmodule_admin_purge"
 msgstr "/admin/purge"
-msgid "zikulapagesmodule_adminform_config"
-msgstr "/admin/config"
 msgid "zikulapagesmodule_adminform_delete"
 msgstr "/admin/delete/{page}"
 msgid "zikulapagesmodule_adminform_edit"
 msgstr "/admin/edit/{page}"
+msgid "zikulapagesmodule_config_config"
+msgstr "/admin/config"
 msgid "zikulapagesmodule_user_categories"
 msgstr "/categories"
 msgid "zikulapagesmodule_user_display"
@@ -34,5 +44,5 @@ msgid "zikulapagesmodule_user_index"
 msgstr "/"
 msgid "zikulapagesmodule_user_listpages"
 msgstr "/list/{startnum}"
-msgid "zikulapagesmodule_user_view"
-msgstr "/view/{prop}/{cat}/{startnum}"
+msgid "zikulapagesmodule_user_viewcategory"
+msgstr "/view/{category}/{startnum}"
