--- a/Resources/translations/zikulapagesmodule.en.po
+++ b/Resources/translations/zikulapagesmodule.en.po
@@ -4,26 +4,30 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: en\n"
 
-msgid "%s page|%s pages"
-msgstr "%s page|%s pages"
+msgid "%count% page|%count% pages"
+msgstr "%count% page|%count% pages"
 msgid "%s reads"
 msgstr "%s reads"
 msgid "%s total characters in this text"
 msgstr "%s total characters in this text"
 msgid "Actions"
 msgstr "Actions"
+msgid "Add category title to permalink"
+msgstr "Add category title to permalink"
+msgid "All"
+msgstr "All"
 msgid "Available categories:"
 msgstr "Available categories:"
 msgid "Available pages:"
 msgstr "Available pages:"
+msgid "Cancel"
+msgstr "Cancel"
 msgid "Categories"
 msgstr "Categories"
 msgid "Category 1"
 msgstr "Category 1"
 msgid "Category 2"
 msgstr "Category 2"
-msgid "Category: %s"
-msgstr "Category: %s"
 msgid "Clear"
 msgstr "Clear"
 msgid "Content"
@@ -48,8 +52,28 @@ msgid "Delete this page?"
 msgstr "Delete this page?"
 msgid "Did not create default categories (%s)."
 msgstr "Did not create default categories (%s)."
+msgid "Display additional information"
+msgstr "Display additional information"
+msgid "Display page creation date"
+msgstr "Display page creation date"
+msgid "Display page print link"
+msgstr "Display page print link"
+msgid "Display page text statistics"
+msgstr "Display page text statistics"
+msgid "Display page title"
+msgstr "Display page title"
+msgid "Display page update date"
+msgstr "Display page update date"
+msgid "Done! Module configuration updated."
+msgstr "Done! Module configuration updated."
+msgid "Done! Page deleted."
+msgstr "Done! Page deleted."
 msgid "Edit"
 msgstr "Edit"
+msgid "Enable categorization"
+msgstr "Enable categorization"
+msgid "Filter"
+msgstr "Filter"
 msgid "Filter %active%, %count% page listed|Filter %active%, %count% pages listed"
 msgstr "Filter %active%, %count% page listed|Filter %active%, %count% pages listed"
 msgid "First page"
@@ -60,6 +84,8 @@ msgid "ID"
 msgstr "ID"
 msgid "Initial sub-category created on install"
 msgstr "Initial sub-category created on install"
+msgid "Items per page"
+msgstr "Items per page"
 msgid "Language"
 msgstr "Language"
 msgid "Last page"
@@ -72,10 +98,14 @@ msgid "Meta data"
 msgstr "Meta data"
 msgid "Meta tags"
 msgstr "Meta tags"
+msgid "Modify Config"
+msgstr "Modify Config"
 msgid "Modify Page"
 msgstr "Modify Page"
 msgid "Modify page"
 msgstr "Modify page"
+msgid "New Page"
+msgstr "New Page"
 msgid "New page defaults"
 msgstr "New page defaults"
 msgid "Next page"
@@ -84,30 +114,58 @@ msgid "No categories"
 msgstr "No categories"
 msgid "No match found"
 msgstr "No match found"
+msgid "No pages found in this category!"
+msgstr "No pages found in this category!"
 msgid "No pages found."
 msgstr "No pages found."
+msgid "No such page found."
+msgstr "No such page found."
 msgid "Notice: This version does not support upgrades from versions of Pages less than 2.5.1. Please upgrade to 2.5.1 before attempting this upgrade."
 msgstr "Notice: This version does not support upgrades from versions of Pages less than 2.5.1. Please upgrade to 2.5.1 before attempting this upgrade."
+msgid "Operation cancelled."
+msgstr "Operation cancelled."
 msgid "Page Details"
 msgstr "Page Details"
+msgid "Page categories"
+msgstr "Page categories"
+msgid "Page is active"
+msgstr "Page is active"
+msgid "Page list"
+msgstr "Page list"
+msgid "Page saved!"
+msgstr "Page saved!"
 msgid "Pages"
 msgstr "Pages"
+msgid "Pages Filter Hooks"
+msgstr "Pages Filter Hooks"
+msgid "Pages Hooks"
+msgstr "Pages Hooks"
 msgid "Pages list"
 msgstr "Pages list"
-msgid "Pages published under this category:"
-msgstr "Pages published under this category:"
+msgid "Pages published under category: %s"
+msgstr "Pages published under category: %s"
 msgid "Pages settings"
 msgstr "Pages settings"
+msgid "PermaLink URL title"
+msgstr "PermaLink URL title"
+msgid "Permalinks have been reset."
+msgstr "Permalinks have been reset."
 msgid "Permalinks settings"
 msgstr "Permalinks settings"
 msgid "Previous page"
 msgstr "Previous page"
+msgid "Purge permalinks"
+msgstr "Purge permalinks"
+msgid "Save"
+msgstr "Save"
 msgid "Settings"
 msgstr "Settings"
+msgid "Show permalink input field"
+msgstr "Show permalink input field"
 msgid "Specific page settings"
 msgstr "Specific page settings"
-msgid "Static pages"
-msgstr "Static pages"
+msgid "Static Pages"
+msgstr "Static Pages"
 msgid "Title"
 msgstr "Title"
 msgid "Updated on %s"
